# zendesk-task-agents

./: .gitignore  README.md  demo-3terminal-pii.sh  demo-3terminal.sh  demo.py  pyproject.toml
common/: agent_helpers.py  data_types.py  pii_codec.py  pii_config.py  temporal_client.py  tui.py
common/services/: base.py  service_registry.py  zendesk_mock.py
common/tools/: zendesk_tools.py
docs/: benchmark-code-walkthrough.md  benchmark-results.md  pii-separation-research.md
docs/plans/: 2026-03-05-zendesk-task-agents-implementation.md  2026-03-06-live-3-terminal-implementation.md  2026-03-06-live-3-terminal-sla-guardian-design.md  2026-03-10-pii-payload-codec.md
onboarding_concierge/: agent_def.py  config.py  instructions.py  main.py
onboarding_concierge/docker/: Dockerfile.integration  test_harness.py
onboarding_concierge/fixtures/: onboarding_milestones.json  sample_customer.json  sample_integration_config.json
onboarding_concierge/services/: email_mock.py  integration_test_mock.py
onboarding_concierge/tools/: diagnostic_tools.py  report_tools.py
onboarding_concierge/workflows/: activities.py  data_types.py  integration_test_workflow.py  onboarding_workflow.py
order_resolution/: agent_def.py  config.py  instructions.py  main.py
order_resolution/benchmark/: compare.py  temporal_resume.py  uc_native_resume.py
order_resolution/fixtures/: sample_orders.json  sample_shipping.json  sample_ticket.json  sample_ticket_complex.json  sample_ticket_simple.json
sla_guardian/: agent_def.py  benchmark_scale.py  config.py  instructions.py  main.py
(+21 files in other folders)
