[project]
name = "zendesk-task-agents"
version = "0.1.0"
description = "Zendesk Task Agent Suite: Universal Computer + Temporal examples for intelligent, durable customer support workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
